--- a/zopiclon.html
+++ b/zopiclon.html
@@ -292,7 +292,7 @@ const T = {
     sec2Title: "Mad og drikke",
     sec2: [
       "Tag den, når du er klar til at sove (ca. 15–30 min før).",
-      "Tages helst på <strong>tom mave</strong> – især fed mad kan forsinke/ mindske effekten.",
+      "Tages helst på <strong>tom mave</strong> – især fed mad kan forsinke/mindske effekten.",
       "Synkes med <strong>et glas vand</strong>."
     ],
 
@@ -399,9 +399,256 @@ const T = {
 
     footer1: "If you need more information, contact your pharmacy or doctor.",
     footer2: "Prepared by pharmaconomist: Ibrahim Dahir Hanaf"
+  },
+
+  ar: {
+    pageTitle: "إيموزوب (زوبيكلون) – الأرق",
+    hdrH1: "إيموزوب (زوبيكلون) – الأرق",
+    hdrP: "معلومات مختصرة للمرضى وأفراد الأسرة.",
+    backText: "العودة إلى قائمة الأدوية",
+    langLabel: "اختر اللغة:",
+    drugName: "إيموزوب (زوبيكلون)",
+    drugForm: "أقراص منومة",
+    badgeText: "مختصر وواضح",
+
+    sec0Title: "ما هو إيموزوب؟",
+    sec0: [
+      "إيموزوب (زوبيكلون) هو <strong>دواء للنوم</strong> لعلاج <strong>الأرق لفترة قصيرة</strong>."
+    ],
+    sec1Title: "طريقة الاستعمال",
+    sec1: [
+      "<strong>البالغون:</strong> 7.5 ملغ قبل النوم بـ 15–30 دقيقة.",
+      "<strong>كبار السن أو مشاكل التنفس:</strong> غالباً 3.75 ملغ بدايةً → قد تُزاد إلى 7.5 ملغ حسب الطبيب.",
+      "يُستخدم عادة لفترة قصيرة (غالباً 1–2 أسبوع) ثم يُعاد التقييم."
+    ],
+    sec2Title: "الطعام والشراب",
+    sec2: [
+      "خذ الدواء عندما تكون مستعداً للنوم (قبل النوم بـ 15–30 دقيقة).",
+      "يفضل على <strong>معدة فارغة</strong> — الطعام الدهني قد يؤخر/يقلل التأثير.",
+      "يُبتلع مع <strong>كوب ماء</strong>."
+    ],
+    sec3Title: "تحذيرات",
+    sec3: [
+      "قد يسبب نعاساً ودوخة في اليوم التالي.",
+      "يزداد خطر الاعتماد عند الاستخدام الطويل."
+    ],
+    sec4Title: "الآثار الجانبية",
+    sec4: [
+      "جفاف الفم أو طعم معدني/مر.",
+      "صداع أو دوخة.",
+      "غثيان خفيف/اضطراب معدة.",
+      "نعاس في صباح اليوم التالي."
+    ],
+    sec5Title: "التداخلات",
+    sec5: [
+      "تجنب الجمع مع المهدئات الأخرى/الأفيونات دون استشارة (خطر مشاكل التنفس).",
+      "تجنب الكحول.",
+      "بعض أدوية النفسية قد تزيد التأثير — أخبر الطبيب/الصيدلية بكل الأدوية."
+    ],
+    sec6Title: "رمضان والصيام",
+    sec6: [
+      "استشر الطبيب قبل رمضان لوضع خطة آمنة.",
+      "غالباً يُؤخذ مساءً (بعد الإفطار) لكن لا تغيّر الجرعة/الوقت بنفسك.",
+      "لا توقف الدواء فجأة دون استشارة."
+    ],
+    sec7Title: "الحفظ",
+    sec7: [
+      "يحفظ بعيداً عن الأطفال، تحت 25°م وفي العبوة الأصلية.",
+      "لا يستخدم بعد “EXP”. أعد البقايا إلى الصيدلية."
+    ],
+    footer1: "للمزيد من المعلومات تواصل مع الصيدلية أو طبيبك.",
+    footer2: "إعداد: إبراهيم ظاهر حنف (اختصاصي صيدلة)"
+  },
+
+  tr: {
+    pageTitle: "Imozop (Zopiklon) – uykusuzluk",
+    hdrH1: "Imozop (Zopiklon) – uykusuzluk",
+    hdrP: "Hasta ve yakınları için kısa bilgi.",
+    backText: "İlaç listesine geri dön",
+    langLabel: "Dil seçin:",
+    drugName: "Imozop (Zopiklon)",
+    drugForm: "Uyku ilacı (tablet)",
+    badgeText: "Kısa ve anlaşılır",
+
+    sec0Title: "Imozop nedir?",
+    sec0: ["Imozop (zopiklon), <strong>kısa süreli</strong> uykusuzluk tedavisinde kullanılan <strong>uyku ilacıdır</strong>."],
+    sec1Title: "Nasıl alınır?",
+    sec1: [
+      "<strong>Yetişkin:</strong> 7.5 mg yatmadan 15–30 dk önce.",
+      "<strong>Yaşlılar/solunum sorunu:</strong> genelde 3.75 mg başlanır → gerekirse 7.5 mg’a çıkılabilir (doktorla).",
+      "Genelde kısa süre (çoğunlukla 1–2 hafta) kullanılır ve sonra yeniden değerlendirilir."
+    ],
+    sec2Title: "Yemek ve içecek",
+    sec2: [
+      "Uyumaya hazır olduğunuzda alın (15–30 dk önce).",
+      "<strong>Aç karnına</strong> tercih edilir — yağlı yemek etkiyi geciktirebilir/azaltabilir.",
+      "<strong>Bir bardak su</strong> ile yutun."
+    ],
+    sec3Title: "Uyarılar",
+    sec3: ["Ertesi gün uyku hali/baş dönmesi yapabilir.", "Uzun kullanımda bağımlılık riski artar."],
+    sec4Title: "Yan etkiler",
+    sec4: ["Ağız kuruluğu veya metalik/acı tat.", "Baş ağrısı veya baş dönmesi.", "Hafif bulantı/mide rahatsızlığı.", "Ertesi gün sersemlik."],
+    sec5Title: "Etkileşimler",
+    sec5: ["Diğer sakinleştiriciler/opioidlerle doktora danışmadan kullanmayın.", "Alkolden kaçının.", "Bazı psikiyatrik ilaçlar etkiyi artırabilir — tüm ilaçlarınızı söyleyin."],
+    sec6Title: "Ramazan ve oruç",
+    sec6: ["Ramazan öncesi doktorla plan yapın.", "Genelde iftardan sonra alınabilir; kendi kendinize saat/doz değiştirmeyin.", "Ani bırakmayın."],
+    sec7Title: "Saklama",
+    sec7: ["Çocuklardan uzak, 25°C’nin altında, orijinal ambalajında saklayın.", "“EXP” sonrası kullanmayın. Artanları eczaneye verin."],
+    footer1: "Daha fazla bilgi için eczane veya doktorunuza başvurun.",
+    footer2: "Hazırlayan: farmakonomist Ibrahim Dahir Hanaf"
+  },
+
+  ur: {
+    pageTitle: "ایموزوپ (زوپیکلُون) – بے خوابی",
+    hdrH1: "ایموزوپ (زوپیکلُون) – بے خوابی",
+    hdrP: "مریضوں اور اہلِ خانہ کے لیے مختصر معلومات۔",
+    backText: "فہرست پر واپس",
+    langLabel: "زبان منتخب کریں:",
+    drugName: "ایموزوپ (زوپیکلُون)",
+    drugForm: "نیند کی گولی",
+    badgeText: "مختصر اور واضح",
+
+    sec0Title: "ایموزوپ کیا ہے؟",
+    sec0: ["ایموزوپ (زوپیکلُون) <strong>مختصر مدت</strong> کے لیے بے خوابی میں استعمال ہونے والی <strong>نیند کی دوا</strong> ہے۔"],
+    sec1Title: "طریقہ استعمال",
+    sec1: [
+      "<strong>بالغ:</strong> 7.5 mg سونے سے 15–30 منٹ پہلے۔",
+      "<strong>بزرگ یا سانس کے مسائل:</strong> عموماً 3.75 mg سے آغاز → ضرورت پر 7.5 mg (ڈاکٹر کے مشورے سے)۔",
+      "عام طور پر کم مدت (اکثر 1–2 ہفتے) استعمال ہوتی ہے اور پھر جائزہ لیا جاتا ہے۔"
+    ],
+    sec2Title: "کھانا پینا",
+    sec2: [
+      "جب آپ سونے کے لیے تیار ہوں تب لیں (15–30 منٹ پہلے)۔",
+      "<strong>خالی پیٹ</strong> بہتر ہے — چکنائی والا کھانا اثر دیر سے کر سکتا ہے۔",
+      "<strong>ایک گلاس پانی</strong> کے ساتھ نگلیں۔"
+    ],
+    sec3Title: "احتیاطیں",
+    sec3: ["اگلے دن غنودگی/چکر ہو سکتے ہیں۔", "لمبے عرصے میں عادت/انحصار کا خطرہ بڑھتا ہے۔"],
+    sec4Title: "مضر اثرات",
+    sec4: ["منہ خشک ہونا یا دھاتی/کڑوا ذائقہ۔", "سر درد یا چکر۔", "ہلکی متلی/پیٹ کی خرابی۔", "اگلے دن غنودگی۔"],
+    sec5Title: "دواؤں کے باہمی اثرات",
+    sec5: ["دیگر سکون آور/اوپیائڈز کے ساتھ بغیر مشورہ استعمال نہ کریں۔", "الکحل سے پرہیز کریں۔", "کچھ نفسیاتی ادویات اثر بڑھا سکتی ہیں — تمام ادویات بتائیں۔"],
+    sec6Title: "رمضان اور روزہ",
+    sec6: ["رمضان سے پہلے ڈاکٹر سے پلان بنائیں۔", "اکثر افطار کے بعد لی جا سکتی ہے؛ خود سے وقت/خوراک نہ بدلیں۔", "اچانک بند نہ کریں۔"],
+    sec7Title: "محفوظ رکھنا",
+    sec7: ["بچوں سے دور، 25°C سے کم، اصل پیک میں رکھیں۔", "“EXP” کے بعد استعمال نہ کریں۔ بچی دوا فارمیسی کو دیں۔"],
+    footer1: "مزید معلومات کے لیے فارمیسی یا ڈاکٹر سے رابطہ کریں۔",
+    footer2: "مرتب کردہ: فارماکونومسٹ ابراہیم ظاہر حنف"
+  },
+
+  fa: {
+    pageTitle: "ایموزوپ (زوپیکلُن) – بی‌خوابی",
+    hdrH1: "ایموزوپ (زوپیکلُن) – بی‌خوابی",
+    hdrP: "اطلاعات کوتاه برای بیماران و خانواده‌ها.",
+    backText: "بازگشت به فهرست",
+    langLabel: "انتخاب زبان:",
+    drugName: "ایموزوپ (زوپیکلُن)",
+    drugForm: "قرص خواب",
+    badgeText: "کوتاه و روشن",
+
+    sec0Title: "ایموزوپ چیست؟",
+    sec0: ["ایموزوپ (زوپیکلُن) یک <strong>داروی خواب</strong> برای درمان <strong>کوتاه‌مدت</strong> بی‌خوابی است."],
+    sec1Title: "نحوه مصرف",
+    sec1: [
+      "<strong>بزرگسالان:</strong> 7.5 میلی‌گرم 15–30 دقیقه قبل از خواب.",
+      "<strong>سالمندان/مشکل تنفسی:</strong> معمولاً شروع 3.75 میلی‌گرم → در صورت نیاز تا 7.5 (با نظر پزشک).",
+      "معمولاً کوتاه‌مدت (اغلب 1–2 هفته) و سپس ارزیابی مجدد."
+    ],
+    sec2Title: "غذا و نوشیدنی",
+    sec2: [
+      "وقتی آماده خواب هستید مصرف کنید (15–30 دقیقه قبل).",
+      "بهتر است <strong>با معده خالی</strong> — غذای چرب می‌تواند اثر را دیرتر/کمتر کند.",
+      "با <strong>یک لیوان آب</strong> مصرف کنید."
+    ],
+    sec3Title: "هشدارها",
+    sec3: ["ممکن است روز بعد خواب‌آلودگی/سرگیجه بدهد.", "در مصرف طولانی خطر وابستگی بیشتر می‌شود."],
+    sec4Title: "عوارض",
+    sec4: ["خشکی دهان یا طعم فلزی/تلخ.", "سردرد یا سرگیجه.", "تهوع خفیف/ناراحتی معده.", "خواب‌آلودگی صبح روز بعد."],
+    sec5Title: "تداخلات",
+    sec5: ["با آرام‌بخش‌ها/اوپیوییدها بدون نظر پزشک مصرف نشود.", "از الکل پرهیز کنید.", "برخی داروهای روان‌پزشکی اثر را افزایش می‌دهند — همه داروها را اعلام کنید."],
+    sec6Title: "رمضان و روزه",
+    sec6: ["قبل از رمضان با پزشک برنامه‌ریزی کنید.", "اغلب بعد از افطار قابل مصرف است؛ خودسرانه زمان/دوز را تغییر ندهید.", "ناگهانی قطع نکنید."],
+    sec7Title: "نگهداری",
+    sec7: ["دور از دسترس کودکان، زیر 25°C و در بسته‌بندی اصلی نگهداری شود.", "پس از “EXP” مصرف نشود. باقی‌مانده را به داروخانه تحویل دهید."],
+    footer1: "برای اطلاعات بیشتر با داروخانه یا پزشک خود تماس بگیرید.",
+    footer2: "تهیه‌کننده: فارماکونومیست ابراهیم ظاهر حنف"
+  },
+
+  prs: {
+    pageTitle: "ایموزوپ (زوپیکلُن) – بی‌خوابی",
+    hdrH1: "ایموزوپ (زوپیکلُن) – بی‌خوابی",
+    hdrP: "معلومات کوتاه برای مریضان و خانواده‌ها.",
+    backText: "بازگشت به فهرست",
+    langLabel: "انتخاب زبان:",
+    drugName: "ایموزوپ (زوپیکلُن)",
+    drugForm: "قرص خواب",
+    badgeText: "کوتاه و واضح",
+
+    sec0Title: "ایموزوپ چیست؟",
+    sec0: ["ایموزوپ (زوپیکلُن) <strong>دوا برای خواب</strong> است و برای <strong>مدت کوتاه</strong> بی‌خوابی استفاده می‌شود."],
+    sec1Title: "طرز مصرف",
+    sec1: [
+      "<strong>بزرگسالان:</strong> 7.5 mg 15–30 دقیقه قبل از خواب.",
+      "<strong>سالمندان/مشکل تنفس:</strong> معمولاً 3.75 mg شروع → در صورت ضرورت تا 7.5 mg (با نظر داکتر).",
+      "معمولاً کوتاه‌مدت (اکثر 1–2 هفته) و بعد دوباره ارزیابی."
+    ],
+    sec2Title: "غذا و نوشیدنی",
+    sec2: [
+      "وقتی آماده خواب هستید بگیرید (15–30 دقیقه قبل).",
+      "بهتر است <strong>با شکم خالی</strong> — غذای چرب اثر را عقب می‌اندازد/کم می‌کند.",
+      "با <strong>یک گلاس آب</strong> بگیرید."
+    ],
+    sec3Title: "هشدارها",
+    sec3: ["روز بعد خواب‌آلودگی/سرگیجه می‌دهد.", "در استفاده طولانی خطر عادت/وابستگی بالا می‌رود."],
+    sec4Title: "عوارض",
+    sec4: ["خشکی دهان یا طعم فلزی/تلخ.", "سردرد یا سرگیجه.", "تهوع خفیف/ناراحتی معده.", "خواب‌آلودگی صبح."],
+    sec5Title: "تداخلات",
+    sec5: ["با آرام‌بخش‌ها/اوپیوییدها بدون مشوره استفاده نکنید.", "الکل را دوری کنید.", "بعضی دواهای روانی اثر را زیاد می‌کند — همه دواها را بگویید."],
+    sec6Title: "رمضان و روزه",
+    sec6: ["قبل از رمضان با داکتر پلان بسازید.", "اکثر بعد از افطار گرفته می‌شود؛ خودسرانه وقت/دوز را تغییر ندهید.", "ناگهانی قطع نکنید."],
+    sec7Title: "نگهداری",
+    sec7: ["دور از دسترس اطفال، زیر 25°C و در بسته‌بندی اصلی نگه‌داری شود.", "بعد از “EXP” استفاده نشود. باقی‌مانده را به دواخانه بسپارید."],
+    footer1: "برای معلومات بیشتر با دواخانه یا داکتر خود تماس بگیرید.",
+    footer2: "تهیه‌کننده: فارماکونومیست ابراهیم ظاهر حنف"
+  },
+
+  ps: {
+    pageTitle: "ایموزوپ (زوپیکلُون) – بې خوبي",
+    hdrH1: "ایموزوپ (زوپیکلُون) – بې خوبي",
+    hdrP: "د ناروغانو او کورنۍ لپاره لنډ معلومات.",
+    backText: "لېست ته بېرته",
+    langLabel: "ژبه وټاکئ:",
+    drugName: "ایموزوپ (زوپیکلُون)",
+    drugForm: "د خوب ګولۍ",
+    badgeText: "لنډ او روښانه",
+
+    sec0Title: "ایموزوپ څه شی دی؟",
+    sec0: ["ایموزوپ (زوپیکلُون) د <strong>لنډ وخت</strong> بې خوبۍ لپاره د <strong>خوب درمل</strong> دي."],
+    sec1Title: "څنګه واخلو؟",
+    sec1: [
+      "<strong>لویان:</strong> 7.5 mg د خوب نه 15–30 دقیقې مخکې.",
+      "<strong>زاړه/د ساه ستونزې:</strong> اکثر 3.75 mg پیل → که اړتیا وي 7.5 mg ته لوړ (د ډاکټر له مخې).",
+      "اکثر لنډ مهال (ډېر وخت 1–2 اونۍ) او بیا بیاکتنه."
+    ],
+    sec2Title: "خواړه او څښاک",
+    sec2: [
+      "کله چې د خوب لپاره تیار یاست واخلئ (15–30 دقیقې مخکې).",
+      "<strong>په تشه معده</strong> غوره ده — غوړ خواړه اغېز ځنډولای/کمولای شي.",
+      "له <strong>یو ګیلاس اوبو</strong> سره یې تېر کړئ."
+    ],
+    sec3Title: "خبرداری",
+    sec3: ["بله ورځ خوبولي/سر ګرځېدل رامنځته کولی شي.", "په اوږده کارونه کې د عادت/انحصار خطر لوړېږي."],
+    sec4Title: "اړخیزې اغېزې",
+    sec4: ["د خولې وچوالی یا فلزي/ترخ خوند.", "سر درد یا سر ګرځېدل.", "سپک زړه بدوالی/معدې ناارامي.", "د سهار خوبولي."],
+    sec5Title: "تداخلات",
+    sec5: ["له نورو اراموونکو/اوپیوییدونو سره بې له مشورې مه کاروئ.", "له الکول څخه ډډه وکړئ.", "ځینې رواني درمل اغېز زیاتوي — خپل ټول درمل ووایئ."],
+    sec6Title: "رمضان او روژه",
+    sec6: ["له رمضان مخکې له ډاکټر سره پلان جوړ کړئ.", "اکثر له افطار وروسته اخیستل کېږي؛ خپله وخت/دوز مه بدلوئ.", "ناڅاپه مه بندوئ."],
+    sec7Title: "ساتنه",
+    sec7: ["له ماشومانو لرې، تر 25°C لاندې او په اصلي بسته کې وساتئ.", "له “EXP” وروسته مه کاروئ. پاتې درمل درملتون ته وسپارئ."],
+    footer1: "د نورو معلوماتو لپاره له درملتون یا خپل ډاکټر سره اړیکه ونیسئ.",
+    footer2: "چمتو کوونکی: فارمکونومېسټ ابراهیم ظاهر حنف"
   }
-  // Hvis du vil, kan jeg også indsætte ar/tr/ur/fa/prs/ps her,
-  // men du sagde “lav det ensartet”, så jeg holder den kort som standard.
 };
 
 function setDirLang(lang){
@@ -461,6 +708,7 @@ function applyLang(lang){
 // Start language from ?lang=
 const params = new URLSearchParams(window.location.search);
 const startLang = params.get("lang") || "so";
+
 document.getElementById("langSelect").value = (T[startLang] ? startLang : "so");
 applyLang(document.getElementById("langSelect").value);
 
