--- a/hjertemagnyl.html
+++ b/hjertemagnyl.html
@@ -219,7 +219,7 @@ const T = {
       ]},
       interact: { title:"Isdhexgalka daawooyinka", small:"(Interaktioner)", items:[
         "Ha isku darin Hjertemagnyl iyo NSAID kale (ibuprofen, diclofenac, naproxen) adiga oo aan talo ka qaadan farmashiyaha/dhakhtarka.",
-        "Isku darka daawooyinka kale ee dhiig-khafiifinta (tusaale: warfarin/Marevan, apixaban/Eliquis, rivaroxaban/Xarelto, clopidogrel) wuxuu kordhin karaa khatarta dhiig-baxa."
+        "Isku darka daawooyinka kale ee dhiig-khafiifinta (tusaale: warfarin/Marevan, apixaban/Eliquis iyo rivaroxaban/Xarelto) waxeey kordhin karaan khatarta dhiig-baxa."
       ]},
       warn: { title:"Digniino", small:"(Advarsler)", items:[
         "U sheeg dhakhtarka ama dhakhtarka ilkaha in aad qaadato Hjertemagnyl, gaar ahaan ka hor qalliin, daawayn ilko ama faragelin kale — waxay kordhin kartaa khatarta dhiig-baxa.",
@@ -274,7 +274,7 @@ const T = {
         "Børn og unge: Må kun anvendes efter lægelig vurdering og ordination.",
         "Hvis du tidligere har haft mavesår eller mave-tarm-blødning, kan du have behov for særlig vurdering/beskyttelse af maven.",
         "Hvis du er allergisk over for aspirin, må du ikke tage medicinen.",
-        "Bemærk: Det samme gælder generelt for andre blodfortyndende lægemidler som warfarin, apixaban, rivaroxaban og clopidogrel."
+        "Bemærk: Det samme gælder generelt for andre blodfortyndende lægemidler som warfarin, apixaban og rivaroxaban."
       ]},
       ramadan: { title:"Ramadan og faste", small:"", items:[
         "Hjertemagnyl som tablet bryder fasten, hvis den tages i dagtimerne.",
@@ -315,7 +315,7 @@ const T = {
       ]},
       interact: { title:"Interactions", small:"", items:[
         "Avoid combining with other NSAIDs (ibuprofen, diclofenac, naproxen) without advice from a pharmacist/doctor.",
-        "Using other blood thinners (e.g., warfarin, apixaban, rivaroxaban, clopidogrel) together increases bleeding risk."
+        "Using other blood thinners (e.g., warfarin, apixaban, rivaroxaban and clopidogrel) together increases bleeding risk."
       ]},
       warn: { title:"Warnings", small:"", items:[
         "Always tell your doctor/dentist that you take Hjertemagnyl, especially before surgery or dental procedures. It may increase bleeding risk.",
