--- a/hjertemagnyl.html
+++ b/hjertemagnyl.html
@@ -219,14 +219,15 @@ const T = {
       ]},
       interact: { title:"Isdhexgalka daawooyinka", small:"(Interaktioner)", items:[
         "Ha isku darin Hjertemagnyl iyo NSAID kale (ibuprofen, diclofenac, naproxen) adiga oo aan talo ka qaadan farmashiyaha/dhakhtarka.",
-        "Isku darka daawooyinka kale ee dhiig-khafiifinta (tusaale: warfarin/Marevan, apixaban/Eliquis iyo rivaroxaban/Xarelto) waxeey kordhin karaan khatarta dhiig-baxa."
+        "Isku darka daawooyinka kale ee dhiig-khafiifinta (tusaale: warfarin/Marevan, apixaban/Eliquis) waxeey kordhin karaan khatarta dhiig-baxa.",
+        "Sidoo kale, <span class='highlight'>rivaroxaban (Xarelto)</span> waxay kordhin kartaa khatarta dhiig-baxa haddii lagu daro."
       ]},
       warn: { title:"Digniino", small:"(Advarsler)", items:[
-        "U sheeg dhakhtarka ama dhakhtarka ilkaha in aad qaadato Hjertemagnyl, gaar ahaan ka hor qalliin, daawayn ilko ama faragelin kale — waxay kordhin kartaa khatarta dhiig-baxa.",
+        "U sheeg dhakhtarka ama dhakhtarka ilkaha in aad qaadato Hjertemagnyl, gaar ahaan ka hor qalliin, daawayn ilko ama faragelin kale — waxay kordhin karaan khatarta dhiig-baxa.",
         "Carruur iyo dhallinyaro: waxaa la isticmaalaa oo keliya haddii dhakhtar si gaar ah u qiimeeyo oo u qoro.",
         "Haddii aad hore u lahayd boogo caloosha ah ama dhiig-bax caloosha, waxaad u baahantahay qiimeyn/daryeel dheeraad ah.",
         "Haddii aad xasaasiyad (allergi) ku leedahay aspirin, daawadan ha qaadan.",
-        "Ogsoonow: digniinahan ku saabsan dhiig-baxa (tusaale qalliin/takhtar ilko) waxay sidoo kale khuseeyaan daawooyinka kale ee dhiig-khafiifinta sida warfarin, apixaban, rivaroxaban, iyo clopidogrel."
+        "Ogsoonow: digniinahan ku saabsan dhiig-baxa (tusaale qalliin/takhtar ilko) waxay sidoo kale khuseeyaan daawooyinka kale ee dhiig-khafiifinta sida warfarin, apixaban, iyo <span class='highlight'>rivaroxaban</span>."
       ]},
       ramadan: { title:"Ramadaan iyo soonka", small:"(Ramadan og faste)", items:[
         "Kiniinka Hjertemagnyl wuxuu jebiyaa soonka haddii la qaato maalinta.",
@@ -267,14 +268,15 @@ const T = {
       ]},
       interact: { title:"Interaktioner", small:"", items:[
         "Undgå at kombinere Hjertemagnyl med andre NSAID (ibuprofen, diclofenac, naproxen) uden råd fra apotek/læge.",
-        "Samtidig brug af andre blodfortyndende midler (fx warfarin/Marevan, apixaban/Eliquis, rivaroxaban/Xarelto, clopidogrel) øger blødningsrisikoen."
+        "Samtidig brug af andre blodfortyndende midler (fx warfarin/Marevan, apixaban/Eliquis) øger blødningsrisikoen.",
+        "Også <span class='highlight'>rivaroxaban (Xarelto)</span> kan øge blødningsrisikoen ved kombination."
       ]},
       warn: { title:"Advarsler", small:"", items:[
         "Fortæl altid læge/tandlæge, at du tager Hjertemagnyl – især før operation, tandbehandling eller andre indgreb. Det kan øge risikoen for blødning.",
         "Børn og unge: Må kun anvendes efter lægelig vurdering og ordination.",
         "Hvis du tidligere har haft mavesår eller mave-tarm-blødning, kan du have behov for særlig vurdering/beskyttelse af maven.",
         "Hvis du er allergisk over for aspirin, må du ikke tage medicinen.",
-        "Bemærk: Det samme gælder generelt for andre blodfortyndende lægemidler som warfarin, apixaban og rivaroxaban."
+        "Bemærk: Det samme gælder generelt for andre blodfortyndende lægemidler som warfarin, apixaban og <span class='highlight'>rivaroxaban</span>."
       ]},
       ramadan: { title:"Ramadan og faste", small:"", items:[
         "Hjertemagnyl som tablet bryder fasten, hvis den tages i dagtimerne.",
@@ -315,14 +317,15 @@ const T = {
       ]},
       interact: { title:"Interactions", small:"", items:[
         "Avoid combining with other NSAIDs (ibuprofen, diclofenac, naproxen) without advice from a pharmacist/doctor.",
-        "Using other blood thinners (e.g., warfarin, apixaban, rivaroxaban and clopidogrel) together increases bleeding risk."
+        "Using other blood thinners (e.g., warfarin and apixaban) together increases bleeding risk.",
+        "Also <span class='highlight'>rivaroxaban (Xarelto)</span> can increase bleeding risk when combined."
       ]},
       warn: { title:"Warnings", small:"", items:[
         "Always tell your doctor/dentist that you take Hjertemagnyl, especially before surgery or dental procedures. It may increase bleeding risk.",
         "Children and adolescents: Use only if prescribed after medical assessment.",
         "If you have had stomach ulcers or gastrointestinal bleeding, you may need extra precautions.",
         "Do not take it if you are allergic to aspirin.",
-        "Note: Similar precautions apply to other blood thinners such as warfarin, apixaban, rivaroxaban, and clopidogrel."
+        "Note: Similar precautions apply to other blood thinners such as warfarin, apixaban and <span class='highlight'>rivaroxaban</span>."
       ]},
       ramadan: { title:"Ramadan and fasting", small:"", items:[
         "Hjertemagnyl tablets break the fast if taken during daytime.",
@@ -363,14 +366,15 @@ const T = {
       ]},
       interact: { title:"التداخلات الدوائية", small:"", items:[
         "تجنب الجمع مع أدوية NSAIDs الأخرى (إيبوبروفين، ديكلوفيناك، نابروكسين) دون نصيحة طبية.",
-        "استخدامه مع مميعات دم أخرى (مثل وارفارين، أبيكسابان، ريفاروكسابان، كلوبيدوغريل) يزيد خطر النزيف."
+        "استخدامه مع مميعات دم أخرى (مثل وارفارين وأبيكسابان) يزيد خطر النزيف.",
+        "كذلك <span class='highlight'>ريفاروكسابان (Xarelto)</span> قد يزيد خطر النزيف عند الجمع."
       ]},
       warn: { title:"تحذيرات", small:"", items:[
         "أخبر الطبيب/طبيب الأسنان أنك تتناول هجيرتماغنيل، خصوصاً قبل العمليات أو إجراءات الأسنان، لأنه قد يزيد خطر النزيف.",
         "الأطفال والمراهقون: يُستخدم فقط بعد تقييم طبي ووصفة طبية.",
         "إذا كان لديك قرحة معدة أو نزيف سابق بالجهاز الهضمي فقد تحتاج لإجراءات إضافية لحماية المعدة.",
         "لا تتناوله إذا لديك حساسية من الأسبرين.",
-        "ملاحظة: تنطبق الاحتياطات نفسها على مميعات الدم الأخرى مثل وارفارين وأبيكسابان وريفاروكسابان وكلوبيدوغريل."
+        "ملاحظة: تنطبق احتياطات مشابهة على مميعات الدم الأخرى مثل وارفارين وأبيكسابان و<span class='highlight'>ريفاروكسابان</span>."
       ]},
       ramadan: { title:"رمضان والصيام", small:"", items:[
         "الأقراص تُفطر إذا أُخذت نهاراً.",
@@ -411,14 +415,15 @@ const T = {
       ]},
       interact: { title:"Etkileşimler", small:"", items:[
         "Diğer NSAİİ’lerle (ibuprofen, diklofenak, naproksen) doktor/eczacı önerisi olmadan birlikte kullanmayın.",
-        "Diğer kan sulandırıcılarla (ör. warfarin, apixaban, rivaroxaban, clopidogrel) birlikte kullanım kanama riskini artırır."
+        "Diğer kan sulandırıcılarla (ör. warfarin, apixaban) birlikte kullanım kanama riskini artırır.",
+        "Ayrıca <span class='highlight'>rivaroxaban (Xarelto)</span> ile birlikte kullanım kanama riskini artırabilir."
       ]},
       warn: { title:"Uyarılar", small:"", items:[
         "Hjertemagnyl kullandığınızı her zaman doktorunuza/diş hekiminize söyleyin; özellikle ameliyat veya diş işlemleri öncesi. Kanama riskini artırabilir.",
         "Çocuklar ve ergenler: Yalnızca hekim değerlendirmesi ve reçetesi ile kullanılmalıdır.",
         "Mide ülseri veya mide-bağırsak kanaması öykünüz varsa ek önlemler gerekebilir.",
         "Aspirine alerjiniz varsa kullanmayın.",
-        "Not: Benzer uyarılar diğer kan sulandırıcılar (warfarin, apixaban, rivaroxaban, clopidogrel) için de geçerlidir."
+        "Not: Benzer uyarılar diğer kan sulandırıcılar (warfarin, apixaban ve <span class='highlight'>rivaroxaban</span>) için de geçerlidir."
       ]},
       ramadan: { title:"Ramazan ve oruç", small:"", items:[
         "Gündüz alınan tablet orucu bozar.",
@@ -459,14 +464,15 @@ const T = {
       ]},
       interact: { title:"دواؤں کے باہمی اثرات", small:"", items:[
         "NSAIDs (ibuprofen, diclofenac, naproxen) کے ساتھ ڈاکٹر/فارماسسٹ کے مشورے کے بغیر استعمال نہ کریں۔",
-        "دیگر خون پتلا کرنے والی ادویات (مثلاً warfarin, apixaban, rivaroxaban, clopidogrel) کے ساتھ لینے سے خون بہنے کا خطرہ بڑھتا ہے۔"
+        "دیگر خون پتلا کرنے والی ادویات (مثلاً warfarin, apixaban) کے ساتھ لینے سے خون بہنے کا خطرہ بڑھتا ہے۔",
+        "اسی طرح <span class='highlight'>rivaroxaban (Xarelto)</span> کے ساتھ بھی خون بہنے کا خطرہ بڑھ سکتا ہے۔"
       ]},
       warn: { title:"احتیاطیں", small:"", items:[
         "ہمیشہ ڈاکٹر/ڈینٹسٹ کو بتائیں کہ آپ ہیرٹ میگنائل لیتے ہیں، خاص طور پر آپریشن یا دانتوں کے علاج سے پہلے۔ اس سے خون بہنے کا خطرہ بڑھ سکتا ہے۔",
         "بچے اور نوعمر: صرف ڈاکٹر کے جائزے اور نسخے کے بعد استعمال کریں۔",
         "اگر معدے کا السر یا معدے/آنتوں سے خون بہنے کی ہسٹری ہو تو اضافی احتیاط کی ضرورت ہو سکتی ہے۔",
         "اگر aspirin سے الرجی ہے تو استعمال نہ کریں۔",
-        "نوٹ: اسی طرح کی احتیاطیں دیگر بلڈ تھنرز (warfarin, apixaban, rivaroxaban, clopidogrel) پر بھی لاگو ہوتی ہیں۔"
+        "نوٹ: اسی طرح کی احتیاطیں دیگر بلڈ تھنرز (warfarin, apixaban اور <span class='highlight'>rivaroxaban</span>) پر بھی لاگو ہوتی ہیں۔"
       ]},
       ramadan: { title:"رمضان اور روزہ", small:"", items:[
         "دن کے وقت گولی لینے سے روزہ ٹوٹ جاتا ہے۔",
@@ -507,14 +513,15 @@ const T = {
       ]},
       interact: { title:"تداخل‌های دارویی", small:"", items:[
         "بدون توصیه پزشک/داروساز با NSAIDها (ایبوپروفن، دیکلوفناک، ناپروکسن) همزمان مصرف نکنید.",
-        "مصرف همزمان با سایر رقیق‌کننده‌های خون (مثل وارفارین، آپیکسابان، ریواروکسابان، کلوپیدوگرل) خطر خونریزی را افزایش می‌دهد."
+        "مصرف همزمان با سایر رقیق‌کننده‌های خون (مثل وارفارین و آپیکسابان) خطر خونریزی را افزایش می‌دهد.",
+        "همچنین <span class='highlight'>ریواروکسابان (Xarelto)</span> می‌تواند خطر خونریزی را در مصرف همزمان افزایش دهد."
       ]},
       warn: { title:"هشدارها", small:"", items:[
         "همیشه به پزشک/دندانپزشک بگویید که هیرتمگنایل مصرف می‌کنید، به‌خصوص قبل از عمل جراحی یا اقدامات دندانپزشکی؛ ممکن است خطر خونریزی را افزایش دهد.",
         "کودکان و نوجوانان: فقط پس از ارزیابی پزشکی و با نسخه پزشک مصرف شود.",
         "اگر سابقه زخم معده یا خونریزی گوارشی دارید، ممکن است به اقدامات محافظتی نیاز باشد.",
         "اگر به آسپیرین حساسیت دارید، مصرف نکنید.",
-        "نکته: این احتیاط‌ها برای سایر رقیق‌کننده‌های خون مانند وارفارین، آپیکسابان، ریواروکسابان و کلوپیدوگرل نیز صدق می‌کند."
+        "نکته: این احتیاط‌ها برای سایر رقیق‌کننده‌های خون مانند وارفارین، آپیکسابان و <span class='highlight'>ریواروکسابان</span> نیز صدق می‌کند."
       ]},
       ramadan: { title:"رمضان و روزه", small:"", items:[
         "اگر در طول روز مصرف شود، روزه را باطل می‌کند.",
@@ -555,14 +562,15 @@ const T = {
       ]},
       interact: { title:"تداخلات دوایی", small:"", items:[
         "بدون مشورهٔ داکتر/دواخانه با NSAIDها (ایبوپروفن، دیکلوفناک، ناپروکسن) یک‌جا نگیرید.",
-        "گرفتن همزمان با رقیق‌کننده‌های دیگر (مثل وارفارین، آپیکسابان، ریواروکسابان، کلوپیدوگرل) خطر خون‌ریزی را زیاد می‌کند."
+        "گرفتن همزمان با رقیق‌کننده‌های دیگر (مثل وارفارین و آپیکسابان) خطر خون‌ریزی را زیاد می‌کند.",
+        "همچنان <span class='highlight'>ریواروکسابان (Xarelto)</span> می‌تواند خطر خون‌ریزی را در مصرف همزمان بالا ببرد."
       ]},
       warn: { title:"هشدارها", small:"", items:[
         "همیشه به داکتر/دندان‌داکتر بگویید که هیرتمگنایل می‌گیرید، مخصوصاً قبل از عملیات یا تداوی دندان؛ ممکن است خطر خون‌ریزی را زیاد کند.",
         "اطفال و نوجوانان: فقط بعد از ارزیابی داکتر و با نسخه استفاده شود.",
         "اگر سابقه زخم معده یا خون‌ریزی گوارشی دارید، ممکن به احتیاط/محافظت بیشتر نیاز باشد.",
         "اگر به آسپیرین حساسیت دارید، استفاده نکنید.",
-        "یادداشت: این احتیاط‌ها برای سایر رقیق‌کننده‌های خون مانند وارفارین، آپیکسابان، ریواروکسابان و کلوپیدوگرل نیز صدق می‌کند."
+        "یادداشت: این احتیاط‌ها برای سایر رقیق‌کننده‌های خون مانند وارفارین، آپیکسابان و <span class='highlight'>ریواروکسابان</span> نیز صدق می‌کند."
       ]},
       ramadan: { title:"رمضان و روزه", small:"", items:[
         "اگر در روز گرفته شود، روزه را باطل می‌کند.",
@@ -570,7 +578,7 @@ const T = {
       ]},
       food: { title:"غذا و نوشیدنی", small:"", items:[
         "با غذا یا بدون غذا گرفته می‌شود.",
-        "از نوشیدن زیاد الکل خودداری کنید چون خطر خون‌ریزی معده را زیاد می‌کند."
+        "از نوشیدن زیاد الکول خودداری کنید چون خطر خون‌ریزی معده را زیاد می‌کند."
       ]},
       store: { title:"نگهداری", small:"", items:[
         "دور از دسترس اطفال و در درجهٔ حرارت زیر 25 °C نگه‌داری کنید. در بسته‌بندی اصلی برای محافظت از نور و رطوبت نگه‌دارید. بعد از تاریخ انقضا (EXP) یا در صورت تغییر رنگ استفاده نکنید. برای دور انداختن باقی‌مانده‌ها از دواخانه راهنمایی بگیرید."
@@ -603,14 +611,15 @@ const T = {
       ]},
       interact: { title:"د درملو تعامل", small:"", items:[
         "له ډاکټر/درملتون له سلا پرته له NSAID درملو (ibuprofen, diclofenac, naproxen) سره یوځای مه کاروئ.",
-        "له نورو وینې نری کوونکو (لکه warfarin, apixaban, rivaroxaban, clopidogrel) سره یوځای کول د وینه‌بهېدلو خطر زیاتوي."
+        "له نورو وینې نری کوونکو (لکه warfarin او apixaban) سره یوځای کول د وینه‌بهېدلو خطر زیاتوي.",
+        "همدارنګه <span class='highlight'>rivaroxaban (Xarelto)</span> هم د یوځای استعمال پر مهال د وینه‌بهېدلو خطر زیاتولای شي."
       ]},
       warn: { title:"احتیاط", small:"", items:[
         "تل ډاکټر/د غاښونو ډاکټر ته ووایئ چې هیرتمګنایل کاروئ، په ځانګړي ډول د عملیاتو یا د غاښونو له پروسیجرونو مخکې؛ د وینې بهېدلو خطر زیاتولای شي.",
         "ماشومان او ځوانان: یوازې د ډاکټر له ارزونې او نسخې وروسته دې وکارول شي.",
         "که د معدې زخم یا د هاضمې د وینې بهېدلو سابقه لرئ، کېدای شي اضافي احتیاط ته اړتیا وي.",
         "که د اسپرین حساسیت لرئ، مه یې کاروئ.",
-        "یادونه: دغه احتیاطونه د نورو وینې نری کوونکو لکه warfarin، apixaban، rivaroxaban او clopidogrel لپاره هم صدق کوي."
+        "یادونه: دغه احتیاطونه د نورو وینې نری کوونکو لکه warfarin، apixaban او <span class='highlight'>rivaroxaban</span> لپاره هم صدق کوي."
       ]},
       ramadan: { title:"رمضان او روژه", small:"", items:[
         "که د ورځې واخیستل شي، روژه ماتوي.",
